# PostgreSQL-Operator-backend

./: .gitignore  Dockerfile  README.md  cluster.crt  docker-compose.yaml  requirements.txt  requirments.txt
django_project/: settings.py  urls.py
hamamooz-api-test-scripts-main/: Dockerfile  README.md  pyproject.toml
hamamooz-api-test-scripts-main/src/: __init__.py  cli.py  config.py  exceptions.py  task1.py
kubernetes_app/: apps.py
myapp/: Utilities.py  kube_client.py  metrics.py  models.py  serializers.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
token_app/: cluster-config.yaml  middleware.py  models.py  urls.py  views.py
