[project]
name = "hamamooz-scripts"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Maryam Moghaddas", email = "maryam.moghaddas@hamravesh.com" }
]
dependencies = [
    "requests>=2.32.3",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hamamooz_scripts"]
